first endpoint, create a team, works
