# spring-server/src/main/resources/api-spec.yaml
@@ -185,7 +185,7 @@ paths:
           description: Created team object
           required: true
           schema:
-            $ref: '#/definitions/Team'
+            $ref: '#/definitions/NewTeam'
       responses:
         '201':
           description: successful operation
@@ -356,6 +356,16 @@ definitions:
       id:
         type: integer
         format: int64
+      name:
+        type: string
+        minLength: 4
+      members:
+        type: array
+        items:
+          $ref: '#/definitions/User'
+  NewTeam:
+    type: object
+    properties:
       name:
         type: string
         minLength: 4
